# wlroots-kbdd

./: DBus-messages.md  LICENSE  README.md  meson.build
backend/: backend.c  meson.build
dbus_client/: dbus_client.c  meson.build
dbus_server/: dbus_server.c  kbdd_introspection.xml  meson.build  xmltostr.sh
include/: kbdd.h
kbdd/: fixenv.c  kbdd.c  logging.c  meson.build  signals.c
types/: meson.build  wlr_foreign_toplevel_management_v1.c  wlr_keyboard.c
types/seat/: meson.build  wlr_seat_keyboard.c
